
public class Haiya {
    public static void main(String[] args) {

    manipulasiNode linked = new manipulasiNode();
//    linked.totalTinggi();
//    linked.palingGemuk();
//    linked.totalTinggi2();
    linked.cek2();
//    linked.cek();

//        System.out.println( linked.totalTinggi3(linked.current));
    linked.cek3(linked.head,linked.current);

    }

}
