public class men {
    public static void main(String[] args){
        st s = new st();
        s.push(3);
        s.push(2);
        s.push(1);
        s.push(4);
        s.printing();
        s.balik(s);

//        que q = new que();
//        q.enque(3);
//        q.enque(2);
//        q.enque(1);
//        q.enque(4);
//        q.deque();
//        q.deque();
//        q.printing();

    }
}
