public class nope2 {
    int data;
    nope2 next;
    // Constructor
    nope2(int d)
    {
        data = d;
        next = null;
    }
}


